# ndkmutimoduledemo

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/module_1/: CMakeLists.txt  com_zw_demo_ndkmutimoduledemo_jnidemo_Demo.h  hello.cpp
app/src/main/cpp/module_2/: CMakeLists.txt
app/src/main/java/com/zw/demo/ndkmutimoduledemo/: MainActivity.java
app/src/main/java/com/zw/demo/ndkmutimoduledemo/jnidemo/: Demo.java
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
